--- a/src/dune
+++ b/src/dune
@@ -1,11 +1,11 @@
 (menhir
-  (modules parser)
+  (modules aparser)
 )
   
-(ocamllex lexer)
+(ocamllex alexer)
 
 (executable
  (name automata)
  (modes byte exe)
- (flags :standard -w -27-26-32-33 \ -short-paths)
+ (flags :standard -w -27-26-32-33-50 \ -short-paths)
 )
